--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   network_info_plus: ^6.0.0 # To get network info like IP
   wifi_scan: ^0.4.0 # For scanning WiFi networks (Android/iOS only)
   intl: ^0.19.0 # For date formatting
+  path: ^1.9.0 # For joining paths (needed by database_helper)
 
 dev_dependencies:
   flutter_test:
