Refactor app state logging to use debugPrint instead of print statements; remove DatabaseViewerScreen and integrate its functionality into DbManagementScreen; add database management features including data deletion and CSV export placeholders; update home screen to navigate to new DbManagementScreen; add dynamic_color package for theming support.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   wifi_scan: ^0.4.0 # For scanning WiFi networks (Android/iOS only)
   intl: ^0.19.0 # For date formatting
   path: ^1.9.0 # For joining paths (needed by database_helper)
-
+  dynamic_color: any # For Material You dynamic theming (Downgraded as per pub get suggestion)
 dev_dependencies:
   flutter_test:
     sdk: flutter
