feat: Refactor settings screen and implement settings management
- Converted SettingsScreen from StatelessWidget to StatefulWidget for better state management.
- Added methods to build UI components for settings, including adaptive switches and dropdowns.
- Implemented settings model (AppSettings) to manage application settings.
- Created SettingsService to handle saving, loading, and updating settings using SharedPreferences.
- Integrated settings management into the SettingsScreen, allowing users to modify and reset settings.
- Added keyboard intents for various actions related to settings and data management.
- Updated pubspec.yaml to include shared_preferences and flutter_adaptive_scaffold dependencies.
- Registered shared_preferences plugin in macOS project.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,9 @@ dependencies:
   wifi_scan: ^0.4.0 # For scanning WiFi networks (Android/iOS only)
   intl: ^0.19.0 # For date formatting
   path: ^1.9.0 # For joining paths (needed by database_helper)
-  dynamic_color: any # For Material You dynamic theming (Downgraded as per pub get suggestion)
+  dynamic_color: ^1.7.0 # For Material You dynamic theming
+  flutter_adaptive_scaffold: ^0.1.10 # For adaptive layouts
+  shared_preferences: ^2.2.2 # For storing app settings
 dev_dependencies:
   flutter_test:
     sdk: flutter
