--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,10 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>此App需要访问蓝牙以连接ESP32传感器设备。</string>
+	<key>NSBluetoothAlwaysUsageDescription</key> <!-- 如果需要在后台访问 -->
+	<string>此App需要在后台访问蓝牙以保持与ESP32设备的连接。</string>
+	<key>NSLocationWhenInUseUsageDescription</key> <!-- BLE扫描需要 -->
+	<string>此App需要位置权限以扫描附近的低功耗蓝牙设备。</string>
+	<!-- 根据需要可能添加 NSLocationAlwaysUsageDescription 等 -->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Upper Flutter</string>
+	<string>Esp32 Sensor App</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,7 +20,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>upper_flutter</string>
+	<string>esp32_sensor_app</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
