--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: upper_flutter
+name: esp32_sensor_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.0-231.0.dev
+  sdk: ^3.7.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,22 +30,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  provider: ^6.0.5         # 状态管理
+  fl_chart: ^0.63.0        # 图表绘制
+  flutter_libserialport: ^0.3.0 # 串口通信 (主要用于桌面/特定Android)
+  flutter_blue_plus: ^1.14.5   # 低功耗蓝牙 (检查最新版本)
+  permission_handler: ^10.4.3 # 权限请求
+  drift: ^2.11.0          # Or latest - Main Drift package
+  sqlite3_flutter_libs: ^0.5.15 # Or latest - Ships sqlite3 for Android/iOS
+  path_provider: ^2.1.1    # Or latest - Gets platform-specific paths
+  path: ^1.8.3            # Or latest - Path manipulation utilities
+  intl: ^0.18.1            # 日期/时间格式化
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  sqflite: ^2.3.3+1 # For database
-  sqflite_common_ffi: ^2.3.3+1 # For database on Windows/Linux
-  path_provider: ^2.1.3 # To find database path
-  fl_chart: ^0.68.0 # For charts
-  provider: ^6.1.2 # For state management
-  network_info_plus: ^6.0.0 # To get network info like IP
-  wifi_scan: ^0.4.0 # For scanning WiFi networks (Android/iOS only)
-  intl: ^0.19.0 # For date formatting
-  path: ^1.9.0 # For joining paths (needed by database_helper)
-  dynamic_color: ^1.7.0 # For Material You dynamic theming
-  flutter_adaptive_scaffold: ^0.1.10 # For adaptive layouts
-  shared_preferences: ^2.2.2 # For storing app settings
+  async: ^2.11.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,6 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  drift_dev: ^2.11.0       # Or latest - Generates Drift code
+  build_runner: ^2.4.6    # Or latest - Runs code generation
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
