feat: 添加蓝牙和权限处理功能，更新依赖项，优化连接逻辑和界面状态显示
- 新增对 flutter_blue_plus 和 permission_handler 的支持，增强蓝牙设备连接和权限请求功能。
- 更新 pubspec.yaml，添加相关依赖项并指定版本。
- 在 AndroidManifest.xml 和 Info.plist 中添加必要的蓝牙和位置权限声明。
- 重构 AppState 类，支持 TCP 和 BLE 连接的切换，优化数据处理逻辑。
- 更新主界面，增强状态指示器，提供更详细的连接状态反馈。
- 实现 BLE 设备扫描功能，并在界面中展示扫描结果。

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,4 +42,18 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+    <!-- Request legacy Bluetooth permissions on older devices. -->
+    <uses-permission android:name="android.permission.BLUETOOTH" android:maxSdkVersion="30" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" android:maxSdkVersion="30" />
+
+    <!-- Request nearby devices permissions on newer devices. -->
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" android:usesPermissionFlags="neverForLocation" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" /> <!-- If your app ever needs to advertise -->
+
+    <!-- Request location permissions - necessary for BLE scanning on Android 11 and below -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:maxSdkVersion="30"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:maxSdkVersion="30" />
+    <!-- Add android:required="false" if location is only needed for BLE -->
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 </manifest>
