--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,17 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>需要蓝牙权限以连接到传感器设备。</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>需要蓝牙权限以在后台连接传感器设备。</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>需要位置权限以扫描附近的蓝牙设备。</string> <!-- iOS 13+ needs location for scanning -->
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>需要位置权限以在后台扫描蓝牙设备。</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string> <!-- Allows BLE operations in the background -->
+	</array>
 </dict>
 </plist>
