feat: 移除 flutter_blue_plus，整合 universal_ble 以优化蓝牙连接和扫描功能
- 更新 pubspec.yaml，移除 flutter_blue_plus 依赖，添加 universal_ble 依赖。
- 重构 AppState 类，更新 BLE 设备扫描和连接逻辑，支持新的设备类型。
- 修改 AndroidManifest.xml，更新蓝牙和位置权限声明以适应新逻辑。
- 更新主界面，调整设备选择和状态显示，确保与新 BLE 逻辑兼容。
- 优化 BLE 数据处理和连接状态管理，提升用户体验。

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -51,9 +51,10 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" /> <!-- If your app ever needs to advertise -->
 
-    <!-- Request location permissions - necessary for BLE scanning on Android 11 and below -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:maxSdkVersion="30"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:maxSdkVersion="30" />
+    <!-- Request location permissions - NEEDED for BLE scanning on Android 12+ -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> 
+
     <!-- Add android:required="false" if location is only needed for BLE -->
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 </manifest>
