--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -73,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/shu-logo.jpg  # 确保路径正确
+    - assets/images/icon.png # <--- 确保图标本身也作为 asset 包含 (虽然flutter_launcher_icons主要用它生成，但有时也可能需要直接引用)
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -99,3 +101,19 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png" # <--- 确保路径指向你的图标
+  # image_path_android: "assets/images/icon_android.png" # (可选) 如果安卓有单独图标
+  # image_path_ios: "assets/images/icon_ios.png"       # (可选) 如果iOS有单独图标
+  # adaptive_icon_background: "#ffffff"  # (可选) 安卓自适应图标背景色
+  # adaptive_icon_foreground: "assets/images/icon_foreground.png" # (可选) 安卓自适应图标前景
+  windows:
+    generate: true
+    image_path: "assets/images/icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/icon.png"
