feat: Integrate universal_ble as submodule and update dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   dynamic_color: ^1.7.0 # For Material You dynamic theming
   flutter_adaptive_scaffold: ^0.1.10 # For adaptive layouts
   shared_preferences: ^2.2.2 # For storing app settings
-  universal_ble: ^0.17.0 # Add this line
+  universal_ble:
+    path: packages/universal_ble_local # Points to the submodule
   permission_handler: ^12.0.0+1 # Update to the latest major version
 dev_dependencies:
   flutter_test:
