更新图标配置和数据库管理界面
- 将 pubspec.yaml 中的 flutter_icons 更名为 flutter_launchericons，以符合最新的图标配置标准。
- 更新多个平台的应用图标资源，确保图标在不同分辨率下的显示效果。
- 在 db_management_screen.dart 中新增 initialSensorFocus 参数，支持动态更新 AppBar 标题。
- 优化 home_screen.dart 中的图表卡片，添加传感器标识和历史数据查看功能，提升用户体验。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,7 +102,7 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
 
-flutter_icons:
+flutter_launchericons:
   android: true
   ios: true
   image_path: "assets/images/icon.png" # 这个仍然是主图标，用于iOS, Windows, macOS等，以及不支持主题图标的安卓版本
